2002-12-18  Frank Warmerdam  <warmerdam@pobox.com>

	* ogdi/include/ecs_util.h: If PI is undefined try to use M_PI.  If
	not available define with much more precision.  As per bug report
	from Craig Bruce.

=============================================================================

2002-03-28  Frank Warmerdam  <warmerdam@pobox.com>

	* OGDI 3.1.1 Release.

	* external/zlib/*: Upgraded to zlib 1.1.4 to avoid widely publicized
	security problem with zlib 1.1.3.

2002-02-21  Frank Warmerdam  <warmerdam@pobox.com>

	* configure.in: Don't include /usr/local/lib in LIBS path, and
	-I/usr/local/include in CFLAGS by default. 

	* contrib/mkbindist.sh: completed (also added README-BIN.TXT). 

	* contrib/ogdi_import/ogdi_import.c: fixed bug building with old
	(included with OGDI) PROJ.4 library.

	* ogdi/gltpd/{asyncsvr.c,ecs_svc.c}: Undefied svc_fdset if defined
	to avoid dependence on recent libc on linux.

2002-02-08  Frank Warmerdam  <warmerdam@pobox.com>

	* contrib/ogdi_import/ogdi_import.c: Fixed serious bug importing
	floating point fields with unknown precision.  

2001-12-14  Frank Warmerdam  <warmerdam@pobox.com>

	* contrib/ogdi_info/ogdi_info.c: don't try to reproject to latlong
	if already in latlong.

2001-12-11  Frank Warmerdam  <warmerdam@pobox.com>

	* contrib/ogdi_import/ogdi_import.c: fixed region handling if 
	GetLayerRegion() fails - default to global bounds.

2001-11-13  Frank Warmerdam  <warmerdam@pobox.com>

	* contrib/ogdi_import/ogdi_import.c: added -no-dict option.

2001-10-17  Frank Warmerdam  <warmerdam@pobox.com>

	* README: Correct reference to devdir since it isn't normally
	called that in a source release.

2001-10-09  Frank Warmerdam  <warmerdam@pobox.com>

	* contrib/ogdi_import/ogdi_import.c: added preliminary support for
	setting the output (client) projection.

2001-10-01  Frank Warmerdam  <warmerdam@pobox.com>

	* contrib/ogdi_import/ogdi_import.c: various fixes related to region